Fixed text overflow on long game titles

--- a/src/styles/content.less
+++ b/src/styles/content.less
@@ -35,9 +35,13 @@
 		overflow-y: scroll;
 
 		> h2 {
+			height: 1.7em;
 			color: #fff;
 			font-weight: bold;
 			padding-left: .5rem;
+			overflow: hidden;
+			white-space: nowrap;
+			text-overflow: ellipsis;
 
 			> i {
 				cursor: pointer;
